base/beast-core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-core
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
    # type: RollingUpdate
    # rollingUpdate:
    #   maxUnavailable: 25%
    #   maxSurge: 25%
  template:
    metadata:
      annotations:
        "arbitrary": "change this to force re-deploy"
    spec:
      containers:
        - name: beast-core
          image: beast-core
          resources:
            limits:
              cpu: "1000m"
              memory: "2Gi"
            requests:
              cpu: "125m"
              memory: "512Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: platforms
              mountPath: /platforms
      volumes:
        - name: platforms
          persistentVolumeClaim:
            claimName: beast-core
        - name: data-loader
          configMap:
            name: data-loader
