base/beast-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beast-core
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
      name: http-websocket
